optimize (don't need two input streams)